Archive/78698238cb30e063253937ecd3d9379f-4c7a93babd200e4d38472bfd414f71ce/output
+ clang++ -std=c++1y -O2 -Wall -pthread main.cpp
main.cpp:21:14: error: no matching member function for call to 'translate'
        mat3.translate(1.0f, 1.0f, 1.0f);
        ~~~~~^~~~~~~~~
main.cpp:9:13: note: candidate template ignored: disabled by 'enable_if' [with T = matrix<4, 3>]
            std::is_same<T, matrix<4,4>>::value>
            ^
1 error generated.
